--- a/src/index.html
+++ b/src/index.html
@@ -19,10 +19,10 @@
         ><input type="text" class="form-control" id="name" />
       </div>
     </form>
-    <button class="btn btn-primary" id="btnHello">Submit</button>
+    <button class="btn btn-primary" id="btnAddUser">Submit</button>
     <br />
     <br />
-    <table class="table table-striped table-dark">
+    <table class="table table-striped table-dark" id="userList">
       <thead>
         <tr>
           <th scope="col">#</th>
