added new packages and udpated index page

--- a/src/index.html
+++ b/src/index.html
@@ -15,11 +15,15 @@
     <form class="form">
       <!-- div.form-group>label{Name:}+input.form-control#name -->
       <div class="form-group">
-        <label for="">Name:</label
-        ><input type="text" class="form-control" id="name" />
+        <label for="firstName">First Name:</label
+        ><input type="text" class="form-control" id="firstName" />
+      </div>
+      <div class="form-group">
+        <label for="lastName">Last Name:</label
+        ><input type="text" class="form-control" id="lastName" />
       </div>
     </form>
-    <button class="btn btn-primary" id="btnHello">Submit</button>
+    <button class="btn btn-primary" id="btnAddUser">Submit</button>
     <br />
     <br />
     <table class="table table-striped table-dark">
