--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
     <button class="btn btn-primary" id="btnAddUser">Submit</button>
     <br />
     <br />
-    <table class="table table-striped table-dark">
+    <table id="userList" class="table table-striped table-dark">
       <thead>
         <tr>
           <th scope="col">#</th>
